--- a/RegisteringUsers/packages.config
+++ b/RegisteringUsers/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net462" />
   <package id="bootstrap" version="3.3.7" targetFramework="net462" />
+  <package id="chosen" version="1.2.0" targetFramework="net462" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
+  <package id="Harvest.Chosen" version="1.4.2" targetFramework="net462" />
   <package id="jQuery" version="3.3.1" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net462" />
@@ -28,6 +30,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="PrototypeJS" version="1.7.1" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
 </packages>
